fix database initial folder error fix run config missing java.management warning